--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ html,
 body {
     background-color: #3a3936;
     margin: 0px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 header {
@@ -26,13 +26,14 @@ header {
     font-weight: bolder;
     text-decoration: underline;
     border: solid 2px honeydew;
-    margin: 0px 0px 5px 0px ;
-    
+    margin: 0px 0px 5px 0px;
+    background-color: rgb(50, 50, 83);
     width: 100%;
+    font-family: 'Roboto', sans-serif;
 
 }
 
-.image-h {
+/*.image-h {
     background-color: rgb(34, 34, 32);
     background: size 100%;
     ;
@@ -40,19 +41,19 @@ header {
     background-repeat: no-repeat;
 
 
-}
+}*/
 
 .container {
     display: grid;
     grid-gap: 5px;
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-    grid-auto-rows: 125px;
+    grid-auto-rows: 225px;
     grid-auto-flow: dense;
 }
 
 .container>div:hover {
     transform: scale(130%);
-    transition: 600ms;
+    transition: 500ms;
 }
 
 
@@ -69,3 +70,31 @@ header {
     grid-column: span 2;
     grid-row: span 2;
 }
+
+footer {
+    border: solid 4px honeydew;
+    background-color: rgb(50, 50, 83);
+    color: rgb(240, 255, 240);
+    margin-top: 5px;
+}
+footer p {
+    text-align: center;
+    font-size: 4rem;
+    font-weight: bolder;
+    font-family: 'Roboto', sans-serif;
+    text-decoration: underline;
+
+}
+
+@media screen and (min-width: 800px) {
+    .container {
+        grid-template-columns: repeat(auto-fit, minmax(175px, 1fr));
+        grid-auto-rows: 275px;
+    }
+
+@media screen and (min-width: 1000px) {
+    .container {
+            grid-template-columns: repeat(auto-fit, minmax(225px, 1fr));
+            grid-auto-rows: 315px;
+        }
+    }
